--- a/generators/app/templates/app/shared/reducers/create-store.js.ejs
+++ b/generators/app/templates/app/shared/reducers/create-store.js.ejs
@@ -1,11 +1,10 @@
-import { createStore, applyMiddleware, compose } from 'redux'
+import { createStore, applyMiddleware } from 'redux'
 import createSagaMiddleware from 'redux-saga'
-import Reactotron from 'reactotron-react-native'
+import { composeWithDevTools } from 'redux-devtools-extension/developmentOnly';
 
 import RehydrationServices from '../services/rehydration.service'
 import ReduxPersist from '../../config/redux-persist'
-import Config from '../../config/debug-config'
-<%_ if (props.websockets) { _%>
+<%_ if (context.websocket) { _%>
 import WebsocketService from '../websockets/websocket.service'
 <%_ } _%>
 // creates the store
@@ -17,10 +16,10 @@ export default (rootReducer, rootSaga) => {
 
   /* ------------- Saga Middleware ------------- */
 
-  const sagaMonitor = Config.useReactotron ? console.tron.createSagaMonitor() : null
+  const sagaMonitor = null;
   const sagaMiddleware = createSagaMiddleware({ sagaMonitor })
   middleware.push(sagaMiddleware)
-  <%_ if (props.websockets) { _%>
+  <%_ if (context.websocket) { _%>
   const wsSagaMiddleware = createSagaMiddleware(WebsocketService.websocketSagas)
   middleware.push(wsSagaMiddleware)
   <%_ } _%>
@@ -29,11 +28,7 @@ export default (rootReducer, rootSaga) => {
 
   enhancers.push(applyMiddleware(...middleware))
 
-  // if Reactotron is enabled (default for __DEV__), we'll create the store through Reactotron
-  if (Config.useReactotron) {
-    enhancers.push(Reactotron.createEnhancer())
-  }
-  const store = createStore(rootReducer, compose(...enhancers))
+  const store = createStore(rootReducer, composeWithDevTools(...enhancers));
 
   // configure persistStore and check reducer version number
   if (ReduxPersist.active) {
@@ -42,14 +37,14 @@ export default (rootReducer, rootSaga) => {
 
   // kick off root saga
   let sagasManager = sagaMiddleware.run(rootSaga)
-  <%_ if (props.websockets) { _%>
+  <%_ if (context.websocket) { _%>
   let websocketSagaManager = wsSagaMiddleware.run(WebsocketService.websocketSagas)
   <%_ } _%>
 
   return {
     store,
     sagasManager,
-    <%_ if (props.websockets) { _%>
+    <%_ if (context.websocket) { _%>
     websocketSagaManager,
     <%_ } _%>
     sagaMiddleware
